--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -32,11 +32,11 @@
         </div>
         <div class="form-group">
             <label>Purchase Price</label>
-            <input type="text" class="form-control" formControlName="purchasePrice" required >
+            <input type="number" class="form-control" formControlName="purchasePrice" required >
         </div>
         <div class="form-group">
             <label>Purchase Date</label>
-            <input type="text" class="form-control" formControlName="purchaseDate" required >
+            <input type="date" class="form-control" formControlName="purchaseDate" required >
         </div>
         <div class="form-group">
             <label>Contact</label>
