--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -10,7 +10,7 @@
     </div>
     <div class="form-group">
         <label>Email</label>
-        <input type="email" class="form-control" formControlName="email" required >
+        <input type="email" class="form-control" formControlName="email" required placeholder="valid numeric email" >
       </div>
       <div class="form-group">
           <label>Phone</label>
@@ -32,7 +32,7 @@
         </div>
         <div class="form-group">
             <label>Purchase Price</label>
-            <input type="number" class="form-control" formControlName="purchasePrice" required >
+            <input type="number" class="form-control" formControlName="purchasePrice" required placeholder="valid numeric price" >
         </div>
         <div class="form-group">
             <label>Purchase Date</label>
